--- a/pages/settings.html
+++ b/pages/settings.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link rel="icon" href="logo.png" type="image/png"> -->
-  <link href="../styles/settings/settings.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/settings.css" rel="stylesheet" type="text/css" />
   <title>Устный счет</title>
 </head>
 
