--- a/pages/result.html
+++ b/pages/result.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../styles/result.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/result/result.css" rel="stylesheet" type="text/css" />
   <title>Устный счет</title>
 </head>
 
@@ -19,7 +19,7 @@
       </div>
     </div>
   </div>
-  <script src="../scripts/result.js"></script>
+  <script type="module" src="../scripts/result.js"></script>
 </body>
 
 </html>
