--- a/pages/settings.html
+++ b/pages/settings.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../styles/settings.css" rel="stylesheet" type="text/css" />
+  <!-- <link rel="icon" href="logo.png" type="image/png"> -->
+  <link href="../styles/settings/settings.css" rel="stylesheet" type="text/css" />
   <title>Устный счет</title>
 </head>
 
@@ -70,6 +71,6 @@
     </div>
     
   </div>
-  <script src="../scripts/settings.js"></script>
+  <script type="module" src="../scripts/settings.js"></script>
 </body>
 <html>
