--- a/pages/test.html
+++ b/pages/test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../styles/test.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/test/test.css" rel="stylesheet" type="text/css" />
   <title>Устный счет</title>
 </head>
 
@@ -22,7 +22,7 @@
       <div class="new">Далее</div>
     </div>
   </div>
-  <script src="../scripts/test.js"></script>
+  <script type="module" src="../scripts/test.js"></script>
 </body>
 
 </html>
