--- a/pages/test.html
+++ b/pages/test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../styles/test.css" rel="stylesheet" type="text/css" />
+  <link href="../styles/test/test.css" rel="stylesheet" type="text/css" />
   <title>Устный счет</title>
 </head>
 
@@ -15,11 +15,11 @@
       <div class="equation">
         <span class="problem"></span><input type="number" name="" id="answer" autocomplete="off" />
       </div>
-      <div class="check">Проверить</div>
+      <button type="button" class="check">Проверить</button>
     </div>
     <div class="result">
       <div class="message"></div>
-      <div class="new">Далее</div>
+      <button type="button" class="new">Далее</button>
     </div>
   </div>
   <script type="module" src="../scripts/test.js"></script>
