--- a/pages/settings.html
+++ b/pages/settings.html
@@ -51,7 +51,17 @@
 
       </div>
       <div class="buttons">
-        <button type="button" id="reset">⭮</button>
+        <button type="button" id="reset">
+          <?xml version="1.0" encoding="utf-8"?>
+          <svg id="reset-svg" version="1.1" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1080 1080">
+            <g>
+              <path id="reset-svg-path" d="M726.9,805.3c-49.4,32.3-108.5,51.3-171.8,51.3c-174.9,0-316.5-141.7-316.5-316.5s141.7-316.5,316.5-316.5
+              c85.9,0,163.7,34.7,220.7,90.1l-78.4,45.2l226.7,121.5l7.8-256.9l-75.4,43.4C782.1,184.9,674.8,133,555.1,133
+              c-224.9,0-407,182.1-407,407s182.1,407,407,407c85.9,0,165.2-27.1,230.9-72.7L726.9,805.3z" />
+            </g>
+          </svg>
+        </button>
         <button type="button" id="next">❯</button>
       </div>
     </div>
