--- a/pages/settings.html
+++ b/pages/settings.html
@@ -56,9 +56,9 @@
           <svg id="reset-svg" version="1.1" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1080 1080">
             <g>
-              <path id="reset-svg-path" d="M726.9,805.3c-49.4,32.3-108.5,51.3-171.8,51.3c-174.9,0-316.5-141.7-316.5-316.5s141.7-316.5,316.5-316.5
-              c85.9,0,163.7,34.7,220.7,90.1l-78.4,45.2l226.7,121.5l7.8-256.9l-75.4,43.4C782.1,184.9,674.8,133,555.1,133
-              c-224.9,0-407,182.1-407,407s182.1,407,407,407c85.9,0,165.2-27.1,230.9-72.7L726.9,805.3z" />
+              <path id="reset-svg-path" d="M840,826.7L781,767.6c-3.9,4.4-8,8.7-12.2,12.9c-132.2,132.2-344.3,134.4-476.5,2.2S157.8,434,290,301.8
+	c131.5-131.5,346.5-129.9,478.9,0.2l-70.5,70.5L972.6,446l-73.5-274.3L827.9,243c-1.5-1.6-3.1-3.2-4.6-4.7
+	C658.5,73.5,395.8,77.9,231,242.7s-164.8,432,0,596.8s432,164.8,596.8,0C832,835.3,836.1,831,840,826.7z" />
             </g>
           </svg>
         </button>
